В javadoc теста SoftReferenceTest добавлен пример лога работы сборщика мусора